--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 authors = ["happyboy <superhappyboy1995@gmail.com>"]
 description = "Implement most of the commonly used practical transaction-related functions of the EVM network, all EVM traders will need this."
-keywords = ["trade", "crypto", "defi", "dex", "finance", "evm"]
+keywords = ["trade", "crypto", "defi", "finance", "evm"]
 license = "GPL-3.0"
 readme = "README.md"
 repository = "https://github.com/0xhappyboy/evm-trader"
