--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "evm-trader"
-version = "0.1.1"
+name = "evm-sdk"
+version = "0.1.2"
 edition = "2024"
 authors = ["happyboy <superhappyboy1995@gmail.com>"]
 description = "Implement most of the commonly used practical transaction-related functions of the EVM network, all EVM traders will need this."
 keywords = ["trade", "crypto", "defi", "finance", "evm"]
 license = "GPL-3.0"
 readme = "README.md"
-repository = "https://github.com/0xhappyboy/evm-trader"
+repository = "https://github.com/0xhappyboy/evm-sdk"
 
 [dependencies]
 ethers-contract = "2.0"
