--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ chrono = "0.4.42"
 ethers = { version = "2.0", features = ["ws", "openssl"] }
 csv = "1.4.0"
 evm-client = "0.1.5"
+sha3 = "0.10.8"
