--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "evm-sdk"
-version = "0.5.1"
+version = "0.5.5"
 edition = "2024"
 authors = ["happyboy <superhappyboy1995@gmail.com>"]
 description = "Implement most of the commonly used practical transaction-related functions of the EVM network, all EVM traders will need this."
@@ -19,3 +19,5 @@ ethers = { version = "2.0", features = ["ws", "openssl"] }
 csv = "1.4.0"
 evm-client = "0.1.5"
 sha3 = "0.10.8"
+log = "0.4.29"
+env_logger = "0.11.8"
